edbs/edbs/parser/EDBSParser.py
# Generated from /Users/past-madm/Projects/teaching/dat259/dat259-compilers/edbs/EDBS.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class EDBSParser ( Parser ):

    grammarFileName = "EDBS.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'FERDIG.'", "'.'", "':'", 
                     "','", "'''", "'SKRIV'", "'LES'", "'REKN'", "'GJENTAR'", 
                     "'MEDAN'", "'OPPDATER'", "'DEFINER EIT MODUL'", "'MED'", 
                     "'INN'", "'UT'", "'SOM'", "'AVSLUT'", "'MODUL'", "'KALL'", 
                     "'FIL'", "'i'", "'!'", "'IKKJE'", "'OG'", "'ELLER'", 
                     "'='", "'<'", "'<='", "'>'", "'>='", "'+'", "'-'", 
                     "'*'", "'/'", "'^'", "'++'", "'**'", "'//'", "'--'", 
                     "'neste'", "'finn'", "'f\\u00F8rre'", "'tilbakestill'", 
                     "'til'", "'<tom>'", "'<linjeskift>'", "'<tomrom>'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "FINISH_KEYWORD", 
                      "PERIOD", "COLON", "COMMA", "PRIMED", "WRITE_KEYWORD", 
                      "READ_KEYWORD", "CALC_KEYWORD", "REPEAT_KEYWORD", 
                      "CONDITION_KEYWORD", "UPDATE_KEYWORD", "DEFINE_MOULE_KEYWORD", 
                      "MODULE_PARAM_KEYWORD", "INPUT_PARAM_KEYWORD", "OUTPUT_PARAM_KEYWORD", 
                      "MODULE_BODY_KEYWORD", "EXIT_KEYWORD", "MODULE_KEYWORD", 
                      "CALL_MODULE_KEYWORD", "FILE_KEYWORD", "IN_KEYWORD", 
                      "EXCLAMATION", "BOP_NOT", "BOP_AND", "BOP_OR", "COMP_EQL", 
                      "COMP_LT", "COMP_LEQ", "COMP_GT", "COMP_GEQ", "OP_ADD", 
                      "OP_SUB", "OP_MUL", "OP_DIV", "OP_EXP", "SOP_CONCAT", 
                      "SOP_REPEAT", "SOP_SPLIT", "SOP_SUBSTR", "LOP_NEXT", 
                      "LOP_FIND", "LOP_BACK", "LOP_RESET", "LOP_RESET_IDX", 
                      "NULL_CHAR", "NEWLINE_CHAR", "WHITESPACE_CHAR", "NUMBER", 
                      "IDENTIFIER", "STRING", "COMMENT", "NEWLINE", "WHITESPACE" ]

    RULE_program = 0
    RULE_module_def = 1
    RULE_input_params = 2
    RULE_output_params = 3
    RULE_module_body = 4
    RULE_param_list = 5
    RULE_main_statement = 6
    RULE_stmt = 7
    RULE_write_arg = 8
    RULE_expression = 9
    RULE_actual_param_list = 10
    RULE_actual_param = 11
    RULE_list_command = 12
    RULE_str_literal = 13
    RULE_bool_expr = 14
    RULE_comparison = 15

    ruleNames =  [ "program", "module_def", "input_params", "output_params", 
                   "module_body", "param_list", "main_statement", "stmt", 
                   "write_arg", "expression", "actual_param_list", "actual_param", 
                   "list_command", "str_literal", "bool_expr", "comparison" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    FINISH_KEYWORD=3
    PERIOD=4
    COLON=5
    COMMA=6
    PRIMED=7
    WRITE_KEYWORD=8
    READ_KEYWORD=9
    CALC_KEYWORD=10
    REPEAT_KEYWORD=11
    CONDITION_KEYWORD=12
    UPDATE_KEYWORD=13
    DEFINE_MOULE_KEYWORD=14
    MODULE_PARAM_KEYWORD=15
    INPUT_PARAM_KEYWORD=16
    OUTPUT_PARAM_KEYWORD=17
    MODULE_BODY_KEYWORD=18
    EXIT_KEYWORD=19
    MODULE_KEYWORD=20
    CALL_MODULE_KEYWORD=21
    FILE_KEYWORD=22
    IN_KEYWORD=23
    EXCLAMATION=24
    BOP_NOT=25
    BOP_AND=26
    BOP_OR=27
    COMP_EQL=28
    COMP_LT=29
    COMP_LEQ=30
    COMP_GT=31
    COMP_GEQ=32
    OP_ADD=33
    OP_SUB=34
    OP_MUL=35
    OP_DIV=36
    OP_EXP=37
    SOP_CONCAT=38
    SOP_REPEAT=39
    SOP_SPLIT=40
    SOP_SUBSTR=41
    LOP_NEXT=42
    LOP_FIND=43
    LOP_BACK=44
    LOP_RESET=45
    LOP_RESET_IDX=46
    NULL_CHAR=47
    NEWLINE_CHAR=48
    WHITESPACE_CHAR=49
    NUMBER=50
    IDENTIFIER=51
    STRING=52
    COMMENT=53
    NEWLINE=54
    WHITESPACE=55

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FINISH_KEYWORD(self):
            return self.getToken(EDBSParser.FINISH_KEYWORD, 0)

        def module_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EDBSParser.Module_defContext)
            else:
                return self.getTypedRuleContext(EDBSParser.Module_defContext,i)


        def main_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EDBSParser.Main_statementContext)
            else:
                return self.getTypedRuleContext(EDBSParser.Main_statementContext,i)


        def NEWLINE(self):
            return self.getToken(EDBSParser.NEWLINE, 0)

        def getRuleIndex(self):
            return EDBSParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = EDBSParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 32
                self.module_def()
                self.state = 37
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 536320) != 0):
                self.state = 38
                self.main_statement()
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 44
            self.match(EDBSParser.FINISH_KEYWORD)
            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==54:
                self.state = 45
                self.match(EDBSParser.NEWLINE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Module_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEFINE_MOULE_KEYWORD(self):
            return self.getToken(EDBSParser.DEFINE_MOULE_KEYWORD, 0)

        def IDENTIFIER(self):
            return self.getToken(EDBSParser.IDENTIFIER, 0)

        def MODULE_PARAM_KEYWORD(self):
            return self.getToken(EDBSParser.MODULE_PARAM_KEYWORD, 0)

        def input_params(self):
            return self.getTypedRuleContext(EDBSParser.Input_paramsContext,0)


        def output_params(self):
            return self.getTypedRuleContext(EDBSParser.Output_paramsContext,0)


        def MODULE_BODY_KEYWORD(self):
            return self.getToken(EDBSParser.MODULE_BODY_KEYWORD, 0)

        def COLON(self):
            return self.getToken(EDBSParser.COLON, 0)

        def module_body(self):
            return self.getTypedRuleContext(EDBSParser.Module_bodyContext,0)


        def EXIT_KEYWORD(self):
            return self.getToken(EDBSParser.EXIT_KEYWORD, 0)

        def MODULE_KEYWORD(self):
            return self.getToken(EDBSParser.MODULE_KEYWORD, 0)

        def PERIOD(self):
            return self.getToken(EDBSParser.PERIOD, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(EDBSParser.NEWLINE)
            else:
                return self.getToken(EDBSParser.NEWLINE, i)

        def getRuleIndex(self):
            return EDBSParser.RULE_module_def

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModule_def" ):
                return visitor.visitModule_def(self)
            else:
                return visitor.visitChildren(self)




    def module_def(self):

        localctx = EDBSParser.Module_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_module_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(EDBSParser.DEFINE_MOULE_KEYWORD)
            self.state = 49
            self.match(EDBSParser.IDENTIFIER)
            self.state = 50
            self.match(EDBSParser.MODULE_PARAM_KEYWORD)
            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==54:
                self.state = 51
                self.match(EDBSParser.NEWLINE)


            self.state = 54
            self.input_params()
            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==54:
                self.state = 55
                self.match(EDBSParser.NEWLINE)


            self.state = 58
            self.output_params()
            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==54:
                self.state = 59
                self.match(EDBSParser.NEWLINE)


            self.state = 62
            self.match(EDBSParser.MODULE_BODY_KEYWORD)
            self.state = 63
            self.match(EDBSParser.COLON)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==54:
                self.state = 64
                self.match(EDBSParser.NEWLINE)


            self.state = 67
            self.module_body()
            self.state = 68
            self.match(EDBSParser.EXIT_KEYWORD)
            self.state = 69
            self.match(EDBSParser.MODULE_KEYWORD)
            self.state = 70
            self.match(EDBSParser.PERIOD)
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==54:
                self.state = 71
                self.match(EDBSParser.NEWLINE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Input_paramsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INPUT_PARAM_KEYWORD(self):
            return self.getToken(EDBSParser.INPUT_PARAM_KEYWORD, 0)

        def COLON(self):
            return self.getToken(EDBSParser.COLON, 0)

        def param_list(self):
            return self.getTypedRuleContext(EDBSParser.Param_listContext,0)


        def getRuleIndex(self):
            return EDBSParser.RULE_input_params

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInput_params" ):
                return visitor.visitInput_params(self)
            else:
                return visitor.visitChildren(self)




    def input_params(self):

        localctx = EDBSParser.Input_paramsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_input_params)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(EDBSParser.INPUT_PARAM_KEYWORD)
            self.state = 75
            self.match(EDBSParser.COLON)
            self.state = 76
            self.param_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Output_paramsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OUTPUT_PARAM_KEYWORD(self):
            return self.getToken(EDBSParser.OUTPUT_PARAM_KEYWORD, 0)

        def COLON(self):
            return self.getToken(EDBSParser.COLON, 0)

        def IDENTIFIER(self):
            return self.getToken(EDBSParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return EDBSParser.RULE_output_params

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOutput_params" ):
                return visitor.visitOutput_params(self)
            else:
                return visitor.visitChildren(self)




    def output_params(self):

        localctx = EDBSParser.Output_paramsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_output_params)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(EDBSParser.OUTPUT_PARAM_KEYWORD)
            self.state = 79
            self.match(EDBSParser.COLON)
            self.state = 80
            self.match(EDBSParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Module_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def main_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EDBSParser.Main_statementContext)
            else:
                return self.getTypedRuleContext(EDBSParser.Main_statementContext,i)


        def getRuleIndex(self):
            return EDBSParser.RULE_module_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModule_body" ):
                return visitor.visitModule_body(self)
            else:
                return visitor.visitChildren(self)




    def module_body(self):

        localctx = EDBSParser.Module_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_module_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 82
                    self.main_statement()

                else:
                    raise NoViableAltException(self)
                self.state = 85 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(EDBSParser.IDENTIFIER)
            else:
                return self.getToken(EDBSParser.IDENTIFIER, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(EDBSParser.COMMA)
            else:
                return self.getToken(EDBSParser.COMMA, i)

        def getRuleIndex(self):
            return EDBSParser.RULE_param_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam_list" ):
                return visitor.visitParam_list(self)
            else:
                return visitor.visitChildren(self)




    def param_list(self):

        localctx = EDBSParser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_param_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(EDBSParser.IDENTIFIER)
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 88
                self.match(EDBSParser.COMMA)
                self.state = 89
                self.match(EDBSParser.IDENTIFIER)
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Main_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(EDBSParser.StmtContext,0)


        def PERIOD(self):
            return self.getToken(EDBSParser.PERIOD, 0)

        def NEWLINE(self):
            return self.getToken(EDBSParser.NEWLINE, 0)

        def getRuleIndex(self):
            return EDBSParser.RULE_main_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMain_statement" ):
                return visitor.visitMain_statement(self)
            else:
                return visitor.visitChildren(self)




    def main_statement(self):

        localctx = EDBSParser.Main_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_main_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.stmt()
            self.state = 96
            self.match(EDBSParser.PERIOD)
            self.state = 97
            self.match(EDBSParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return EDBSParser.RULE_stmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ReadfileContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EDBSParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def READ_KEYWORD(self):
            return self.getToken(EDBSParser.READ_KEYWORD, 0)
        def FILE_KEYWORD(self):
            return self.getToken(EDBSParser.FILE_KEYWORD, 0)
        def IDENTIFIER(self):
            return self.getToken(EDBSParser.IDENTIFIER, 0)
        def STRING(self):
            return self.getToken(EDBSParser.STRING, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReadfile" ):
                return visitor.visitReadfile(self)
            else:
                return visitor.visitChildren(self)


    class MutateContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EDBSParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def UPDATE_KEYWORD(self):
            return self.getToken(EDBSParser.UPDATE_KEYWORD, 0)
        def IDENTIFIER(self):
            return self.getToken(EDBSParser.IDENTIFIER, 0)
        def COLON(self):
            return self.getToken(EDBSParser.COLON, 0)
        def expression(self):
            return self.getTypedRuleContext(EDBSParser.ExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMutate" ):
                return visitor.visitMutate(self)
            else:
                return visitor.visitChildren(self)


    class ReadContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EDBSParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def READ_KEYWORD(self):
            return self.getToken(EDBSParser.READ_KEYWORD, 0)
        def IDENTIFIER(self):
            return self.getToken(EDBSParser.IDENTIFIER, 0)
        def COLON(self):
            return self.getToken(EDBSParser.COLON, 0)
        def STRING(self):
            return self.getToken(EDBSParser.STRING, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRead" ):
                return visitor.visitRead(self)
            else:
                return visitor.visitChildren(self)


    class CalcContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EDBSParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CALC_KEYWORD(self):
            return self.getToken(EDBSParser.CALC_KEYWORD, 0)
        def IDENTIFIER(self):
            return self.getToken(EDBSParser.IDENTIFIER, 0)
        def COLON(self):
            return self.getToken(EDBSParser.COLON, 0)
        def expression(self):
            return self.getTypedRuleContext(EDBSParser.ExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCalc" ):
                return visitor.visitCalc(self)
            else:
                return visitor.visitChildren(self)


    class WhileContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EDBSParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def REPEAT_KEYWORD(self):
            return self.getToken(EDBSParser.REPEAT_KEYWORD, 0)
        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EDBSParser.StmtContext)
            else:
                return self.getTypedRuleContext(EDBSParser.StmtContext,i)

        def CONDITION_KEYWORD(self):
            return self.getToken(EDBSParser.CONDITION_KEYWORD, 0)
        def bool_expr(self):
            return self.getTypedRuleContext(EDBSParser.Bool_exprContext,0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(EDBSParser.NEWLINE)
            else:
                return self.getToken(EDBSParser.NEWLINE, i)
        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(EDBSParser.COMMA)
            else:
                return self.getToken(EDBSParser.COMMA, i)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile" ):
                return visitor.visitWhile(self)
            else:
                return visitor.visitChildren(self)


    class WriteContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EDBSParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WRITE_KEYWORD(self):
            return self.getToken(EDBSParser.WRITE_KEYWORD, 0)
        def write_arg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EDBSParser.Write_argContext)
            else:
                return self.getTypedRuleContext(EDBSParser.Write_argContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWrite" ):
                return visitor.visitWrite(self)
            else:
                return visitor.visitChildren(self)


    class ReturnContext(StmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EDBSParser.StmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def EXIT_KEYWORD(self):
            return self.getToken(EDBSParser.EXIT_KEYWORD, 0)
        def EXCLAMATION(self):
            return self.getToken(EDBSParser.EXCLAMATION, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn" ):
                return visitor.visitReturn(self)
            else:
                return visitor.visitChildren(self)



    def stmt(self):

        localctx = EDBSParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_stmt)
        self._la = 0 # Token type
        try:
            self.state = 146
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                localctx = EDBSParser.WhileContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.match(EDBSParser.REPEAT_KEYWORD)
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==54:
                    self.state = 100
                    self.match(EDBSParser.NEWLINE)


                self.state = 103
                self.stmt()
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==6:
                    self.state = 104
                    self.match(EDBSParser.COMMA)
                    self.state = 106
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==54:
                        self.state = 105
                        self.match(EDBSParser.NEWLINE)


                    self.state = 108
                    self.stmt()
                    self.state = 113
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==54:
                    self.state = 114
                    self.match(EDBSParser.NEWLINE)


                self.state = 117
                self.match(EDBSParser.CONDITION_KEYWORD)
                self.state = 118
                self.bool_expr(0)
                pass

            elif la_ == 2:
                localctx = EDBSParser.ReadContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.match(EDBSParser.READ_KEYWORD)
                self.state = 121
                self.match(EDBSParser.IDENTIFIER)
                self.state = 122
                self.match(EDBSParser.COLON)
                self.state = 123
                self.match(EDBSParser.STRING)
                pass

            elif la_ == 3:
                localctx = EDBSParser.ReadfileContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 124
                self.match(EDBSParser.READ_KEYWORD)
                self.state = 125
                self.match(EDBSParser.FILE_KEYWORD)
                self.state = 126
                self.match(EDBSParser.IDENTIFIER)
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==52:
                    self.state = 127
                    self.match(EDBSParser.STRING)


                pass

            elif la_ == 4:
                localctx = EDBSParser.WriteContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 130
                self.match(EDBSParser.WRITE_KEYWORD)
                self.state = 132 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 131
                    self.write_arg()
                    self.state = 134 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==51 or _la==52):
                        break

                pass

            elif la_ == 5:
                localctx = EDBSParser.CalcContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 136
                self.match(EDBSParser.CALC_KEYWORD)
                self.state = 137
                self.match(EDBSParser.IDENTIFIER)
                self.state = 138
                self.match(EDBSParser.COLON)
                self.state = 139
                self.expression(0)
                pass

            elif la_ == 6:
                localctx = EDBSParser.MutateContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 140
                self.match(EDBSParser.UPDATE_KEYWORD)
                self.state = 141
                self.match(EDBSParser.IDENTIFIER)
                self.state = 142
                self.match(EDBSParser.COLON)
                self.state = 143
                self.expression(0)
                pass

            elif la_ == 7:
                localctx = EDBSParser.ReturnContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 144
                self.match(EDBSParser.EXIT_KEYWORD)
                self.state = 145
                self.match(EDBSParser.EXCLAMATION)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Write_argContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(EDBSParser.STRING, 0)

        def IDENTIFIER(self):
            return self.getToken(EDBSParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return EDBSParser.RULE_write_arg

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWrite_arg" ):
                return visitor.visitWrite_arg(self)
            else:
                return visitor.visitChildren(self)




    def write_arg(self):

        localctx = EDBSParser.Write_argContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_write_arg)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            _la = self._input.LA(1)
            if not(_la==51 or _la==52):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return EDBSParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class AddContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EDBSParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EDBSParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(EDBSParser.ExpressionContext,i)

        def OP_ADD(self):
            return self.getToken(EDBSParser.OP_ADD, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAdd" ):
                return visitor.visitAdd(self)
            else:
                return visitor.visitChildren(self)


    class SubContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EDBSParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EDBSParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(EDBSParser.ExpressionContext,i)

        def OP_SUB(self):
            return self.getToken(EDBSParser.OP_SUB, 0)
